Some exploration actions implemented

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,114 +1,131 @@
 {
-    "FOUNDRY.Concept.Actor": "Actor",
-    "FOUNDRY.Concept.Token": "Token",
-    
-    "PF2E.Concept.DC": "DC",
-    "PF2E.Concept.Awareness.Title": "Awareness",
-    "PF2E.Concept.Awareness.Unnoticed": "Farkedilmemiş",
-    "PF2E.Concept.Awareness.Undetected": "Saptanmamış",
-    "PF2E.Concept.Awareness.Hidden": "Gizli",
-    "PF2E.Concept.Awareness.Observed": "Görülmüş",
-    "PF2E.Concept.Attitude.Title": "Attitude",
-    "PF2E.Concept.Attitude.Hostile": "Düşman",
-    "PF2E.Concept.Attitude.Unfriendly": "Hasmane",
-    "PF2E.Concept.Attitude.Indifferent": "Kayıtsız",
-    "PF2E.Concept.Attitude.Friendly": "Arkadaş",
-    "PF2E.Concept.Attitude.Helpful": "Yardımcı",
-    "PF2E.Concept.Cover.Title": "Cover",
-    "PF2E.Concept.Cover.None": "None",
-    "PF2E.Concept.Cover.Lesser": "Lesser",
-    "PF2E.Concept.Cover.Standard": "Standard",
-    "PF2E.Concept.Cover.Greater": "Greater",
-    
-    "PF2E.Actions.ConcealAnObject.Title": "Conceal An Object",
-    "PF2E.Actions.CreateADiversion.Title": "Create a Diversion",
-    "PF2E.Actions.CreateADiversion.TrickGesture": "Trick/Gesture",
-    "PF2E.Actions.CreateADiversion.DistractingWords": "Distracting Words",
-    "PF2E.Actions.Escape.Title": "Escape",
-    "PF2E.Actions.Aid.Title": "Aid",
-    "PF2E.Actions.TakeCover.Title": "Take Cover",
-    "PF2E.Actions.ReceiveAid.Title": "Receive Aid",
-    "PF2E.Actions.RaiseAShield.Title": "Raise a Shield",
-    "PF2E.Actions.Prone.Title": "Drop Prone/Stand",
-    "PF2E.Actions.GrabAnEdge.Title": "Grab An Edge",
-    "PF2E.Actions.Perform.Title": "Perform",
-    "PF2E.Actions.RecallKnowledge.Title": "Recall Knowledge",
-    "PF2E.Actions.RecallKnowledge.Notes.criticalSuccess": "<strong>Critical Success</strong> You recall the knowledge accurately and gain additional information or context.",
-    "PF2E.Actions.RecallKnowledge.Notes.success": "<strong>Success</strong> You recall the knowledge accurately or gain a useful clue about your current situation.",
-    "PF2E.Actions.RecallKnowledge.Notes.criticalFailure": "<strong>Critical Failure</strong> You recall incorrect information or gain an erroneous or misleading clue.",
-    "PF2E.Actions.AdministerFirstAid.Bleeding": "Bleeding",
-    "PF2E.Actions.AdministerFirstAid.Poisoned": "Poisoned",
-    "PF2E.Actions.AdministerFirstAid.Dying": "Dying",
-    "PF2E.Actions.DisableADevice.Title": "Disable a Device",
-    "PF2E.Actions.PalmAnObject.Title": "Palm an Object",
-    "PF2E.Actions.Steal.Title": "Steal",
+	"FOUNDRY.Concept.Actor": "Actor",   
+	"FOUNDRY.Concept.Token": "Token",
+	
+	"PF2E.Concept.DC": "DC",
+	"PF2E.Concept.Awareness.Title": "Awareness",
+	"PF2E.Concept.Awareness.Unnoticed": "Farkedilmemiş",
+	"PF2E.Concept.Awareness.Undetected": "Saptanmamış",
+	"PF2E.Concept.Awareness.Hidden": "Gizli",
+	"PF2E.Concept.Awareness.Observed": "Görülmüş",
+	"PF2E.Concept.Attitude.Title": "Attitude",
+	"PF2E.Concept.Attitude.Hostile": "Düşman",
+	"PF2E.Concept.Attitude.Unfriendly": "Hasmane",
+	"PF2E.Concept.Attitude.Indifferent": "Kayıtsız",
+	"PF2E.Concept.Attitude.Friendly": "Arkadaş",
+	"PF2E.Concept.Attitude.Helpful": "Yardımcı",
+	"PF2E.Concept.Cover.Title": "Cover",
+	"PF2E.Concept.Cover.None": "None",
+	"PF2E.Concept.Cover.Lesser": "Lesser",
+	"PF2E.Concept.Cover.Standard": "Standard",
+	"PF2E.Concept.Cover.Greater": "Greater",
+	
+	"PF2E.Actions.ConcealAnObject.Title": "Conceal An Object",
+	"PF2E.Actions.CreateADiversion.Title": "Create a Diversion",
+	"PF2E.Actions.CreateADiversion.TrickGesture": "Trick/Gesture",
+	"PF2E.Actions.CreateADiversion.DistractingWords": "Distracting Words",
+	"PF2E.Actions.Escape.Title": "Escape",
+	"PF2E.Actions.Aid.Title": "Aid",
+	"PF2E.Actions.TakeCover.Title": "Take Cover",
+	"PF2E.Actions.ReceiveAid.Title": "Receive Aid",
+	"PF2E.Actions.RaiseAShield.Title": "Raise a Shield",
+	"PF2E.Actions.Prone.Title": "Drop Prone/Stand",
+	"PF2E.Actions.GrabAnEdge.Title": "Grab An Edge",
+	"PF2E.Actions.Perform.Title": "Perform",
+	"PF2E.Actions.RecallKnowledge.Title": "Recall Knowledge",
+	"PF2E.Actions.RecallKnowledge.Notes.criticalSuccess": "<strong>Critical Success</strong> You recall the knowledge accurately and gain additional information or context.",
+	"PF2E.Actions.RecallKnowledge.Notes.success": "<strong>Success</strong> You recall the knowledge accurately or gain a useful clue about your current situation.",
+	"PF2E.Actions.RecallKnowledge.Notes.criticalFailure": "<strong>Critical Failure</strong> You recall incorrect information or gain an erroneous or misleading clue.",
+	"PF2E.Actions.AdministerFirstAid.Bleeding": "Bleeding",
+	"PF2E.Actions.AdministerFirstAid.Poisoned": "Poisoned",
+	"PF2E.Actions.AdministerFirstAid.Dying": "Dying",
+	"PF2E.Actions.DisableADevice.Title": "Disable a Device",
+	"PF2E.Actions.PalmAnObject.Title": "Palm an Object",
+	"PF2E.Actions.Steal.Title": "Steal",
 
-    "PF2E.Actions.Step.Title": "Step",
-    "PF2E.Actions.Stride.Title": "Stride",
-    "PF2E.Actions.SustainASpell.Title": "Sustain a Spell",
-    "PF2E.Actions.SustainAnActivation.Title": "Sustain an Activation",
-    "PF2E.Actions.Leap.Title": "Leap",
-    "PF2E.Actions.PointOut.Title": "Point Out",
-    "PF2E.Actions.AvertGaze.Title": "Avert Gaze",
-    "PF2E.Actions.Crawl.Title": "Crawl",
-    "PF2E.Actions.Mount.Title": "Mount",
-    "PF2E.Actions.Ready.Title": "Ready",
+	"PF2E.Actions.Step.Title": "Step",
+	"PF2E.Actions.Stride.Title": "Stride",
+	"PF2E.Actions.SustainASpell.Title": "Sustain a Spell",
+	"PF2E.Actions.SustainAnActivation.Title": "Sustain an Activation",
+	"PF2E.Actions.Leap.Title": "Leap",
+	"PF2E.Actions.PointOut.Title": "Point Out",
+	"PF2E.Actions.AvertGaze.Title": "Avert Gaze",
+	"PF2E.Actions.Crawl.Title": "Crawl",
+	"PF2E.Actions.Mount.Title": "Mount",
+	"PF2E.Actions.Ready.Title": "Ready",
+	
+	"PF2E.Actions.AvoidNotice.Title": "Avoid Notice",
+	"PF2E.Actions.Defend.Title": "Defend",
+	"PF2E.Actions.DetectMagic.Title": "Detect Magic",
+	"PF2E.Actions.FollowTheExpert.Title": "Follow the Expert",
+	"PF2E.Actions.Hustle.Title": "Hustle",
+	"PF2E.Actions.Investigate.Title": "Investigate",
+	"PF2E.Actions.Refocus.Title": "Refocus",
+	"PF2E.Actions.RepeatASpell.Title": "Repeat a Spell",
+	"PF2E.Actions.Scout.Title": "Scout",
+	"PF2E.Actions.Search.Title": "Search",
+	"PF2E.Actions.BorrowAnArcaneSpell.Title": "Borrow a Spell",
+	"PF2E.Actions.Coerce.Title": "Coerce",
+	"PF2E.Actions.CoverTracks.Title": "Cover Tracks",
+	"PF2E.Actions.DecipherWriting.Title": "Decipher Writing",
 
-    "PF2E.ActionTag.situational": "Situational",
-    "PF2E.ActionTag.combat": "Combat",
-    "PF2E.ActionTag.hostile": "Hostile",
-    "PF2E.ActionTag.basic": "Basic",
-    "PF2E.ActionTag.social": "Social",
-    "PF2E.ActionTag.stealth": "Stealth",
-    "PF2E.ActionTag.rudimentary": "Rudimentary",
-    "PF2E.MKS.ActionsPanel.ShowApplicable": "Show Applicable",
-    "PF2E.MKS.ActionsPanel.InCombatTurn": "In Combat Turn",
+	"PF2E.ActionTag.situational": "Situational",
+	"PF2E.ActionTag.combat": "Combat",
+	"PF2E.ActionTag.hostile": "Hostile",
+	"PF2E.ActionTag.basic": "Basic",
+	"PF2E.ActionTag.social": "Social",
+	"PF2E.ActionTag.stealth": "Stealth",
+	"PF2E.ActionTag.preparation": "Prep",
+	"PF2E.ActionTag.rudimentary": "Rudimentary",
+	"PF2E.MKS.ActionsPanel.ShowApplicable": "Show Applicable",
+	"PF2E.MKS.ActionsPanel.InCombatTurn": "In Combat Turn",
 
-    "PF2E.MKS.SC.arcane": "Esrar - Arcane Büyü",
-    "PF2E.MKS.SC.occult": "Kült - Occult Büyü",
-    "PF2E.MKS.SC.primal": "Özsel - Primal Büyü",
-    "PF2E.MKS.SC.divine": "Kutsal - Divine Büyü",
+	"PF2E.MKS.SC.arcane": "Esrar - Arcane Büyü",
+	"PF2E.MKS.SC.occult": "Kült - Occult Büyü",
+	"PF2E.MKS.SC.primal": "Özsel - Primal Büyü",
+	"PF2E.MKS.SC.divine": "Kutsal - Divine Büyü",
 
-    "PF2E.MKS.Modifier.partially-disarmed": "Loose Grip",
+	"PF2E.MKS.Modifier.partially-disarmed": "Loose Grip",
 
-    "PF2E.MKS.UI.Actions.cancel": "Cancel",
-    "PF2E.MKS.UI.Actions.ok": "OK",
-    "PF2E.MKS.UI.Actions.add": "Add",
-    "PF2E.MKS.UI.Actions.submit": "Submit",
-    "PF2E.MKS.UI.Actions.revert": "Revert",
-    "PF2E.MKS.UI.ActionsPanel.Label": "Action Panel",
-    "PF2E.MKS.UI.RelativeCondPanel.Label": "Relative Conditions",
-    "PF2E.MKS.Dialog.SelectOne.Title": "Select One",
-    "PF2E.MKS.Dialog.MultipleButtons.Title": "Press One",
-    "PF2E.MKS.Warning.Actor.OneMustBeSelected": "You must select exactly one actor!",
-    "PF2E.MKS.Warning.Actor.AtLeastOneMustBeSelected": "You must select at least one actor!",
-    "PF2E.MKS.Warning.Target.OneMustBeSelected": "You must target exactly one token!",
-    "PF2E.MKS.Warning.Target.AtLeastOneMustBeSelected": "You must target at least one token!",
-    "PF2E.MKS.Warning.Encounter.NoneExists": "No encounter found.",
-    "pf2e.mks.check.skill-check.defaulttitle.firstpart": "${actor.name} ${stat.label} Check",
-    "pf2e.mks.check.perception-check.defaulttitle.firstpart": "${actor.name} Perception Check",
-    "pf2e.mks.check.spell-attack.defaulttitle.firstpart": "${actor.name} Spell Attack",
-    "pf2e.mks.check.saving-throw.defaulttitle.firstpart": "${actor.name} ${stat.label} Check",
-    "pf2e.mks.check.defaulttitle.dcpart": "DC [${dc}]",
-    "PF2E.MKS.Dialog.aid.ready.title": "Ready Aid Reaction",
-    "PF2E.MKS.Dialog.aid.ready.select": "Select How To Aid:",
-    "PF2E.MKS.Dialog.aid.ready.yesaction": "Ready",
-    "PF2E.MKS.Dialog.SetDC.Title": "Set DC",
-    "PF2E.MKS.Dialog.receiveaid.title": "Select Aids",
-    "PF2E.MKS.Dialog.grapple.grabbedorprone.title": "Select a Condition upon Critical Failure",
-    "PF2E.MKS.Dialog.grapple.grabbedorprone.select": "Grabbed or Prone ?",
-    "PF2E.MKS.Dialog.seek.selecttype.title": "How do you seek ?",
-    "PF2E.MKS.Dialog.seek.type.frontcone": "Directly within line of sight",
-    "PF2E.MKS.Dialog.seek.type.frontburst": "Somewhere within line of sight",
-    "PF2E.MKS.Dialog.seek.type.object": "Search an object around",
-    "PF2E.MKS.Dialog.disarm.title": "Disarm",
-    "PF2E.MKS.Dialog.disarm.select": "Select Weapon or Item",
-    "PF2E.MKS.Dialog.Escape.SelectCondition": "Select condition",
-    "PF2E.MKS.Dialog.Escape.SelectSkill": "Select how you escape",
-    "PF2E.MKS.Dialog.RecallKnowledge.SelectSkill": "Select how you recall",
-    "PF2E.MKS.Dialog.CreateADiversion.SelectType": "Select Diversion",
-    "PF2E.MKS.Dialog.AdministerFirstAid.SelectType": "Select Dying or Bleeding Condition",
-    "PF2E.MKS.Dialog.AddModifier.Title": "Add Modifier",
-    "PF2E.MKS.Dialog.AddModifier.Label": ""
+	"PF2E.MKS.UI.Actions.cancel": "Cancel",
+	"PF2E.MKS.UI.Actions.ok": "OK",
+	"PF2E.MKS.UI.Actions.add": "Add",
+	"PF2E.MKS.UI.Actions.submit": "Submit",
+	"PF2E.MKS.UI.Actions.revert": "Revert",
+	"PF2E.MKS.UI.ActionsPanel.Label": "Action Panel",
+	"PF2E.MKS.UI.RelativeCondPanel.Label": "Relative Conditions",
+	"PF2E.MKS.Dialog.SelectOne.Title": "Select One",
+	"PF2E.MKS.Dialog.MultipleButtons.Title": "Press One",
+	"PF2E.MKS.Warning.Actor.OneMustBeSelected": "You must select exactly one actor!",
+	"PF2E.MKS.Warning.Actor.AtLeastOneMustBeSelected": "You must select at least one actor!",
+	"PF2E.MKS.Warning.Target.OneMustBeSelected": "You must target exactly one token!",
+	"PF2E.MKS.Warning.Target.AtLeastOneMustBeSelected": "You must target at least one token!",
+	"PF2E.MKS.Warning.Encounter.NoneExists": "No encounter found.",
+	"pf2e.mks.check.skill-check.defaulttitle.firstpart": "${actor.name} ${stat.label} Check",
+	"pf2e.mks.check.perception-check.defaulttitle.firstpart": "${actor.name} Perception Check",
+	"pf2e.mks.check.spell-attack.defaulttitle.firstpart": "${actor.name} Spell Attack",
+	"pf2e.mks.check.saving-throw.defaulttitle.firstpart": "${actor.name} ${stat.label} Check",
+	"pf2e.mks.check.defaulttitle.dcpart": "DC [${dc}]",
+	"PF2E.MKS.Dialog.aid.ready.title": "Ready Aid Reaction",
+	"PF2E.MKS.Dialog.aid.ready.select": "Select How To Aid:",
+	"PF2E.MKS.Dialog.aid.ready.yesaction": "Ready",
+	"PF2E.MKS.Dialog.SetDC.Title": "Set DC",
+	"PF2E.MKS.Dialog.receiveaid.title": "Select Aids",
+	"PF2E.MKS.Dialog.grapple.grabbedorprone.title": "Select a Condition upon Critical Failure",
+	"PF2E.MKS.Dialog.grapple.grabbedorprone.select": "Grabbed or Prone ?",
+	"PF2E.MKS.Dialog.seek.selecttype.title": "How do you seek ?",
+	"PF2E.MKS.Dialog.seek.type.frontcone": "Directly within line of sight",
+	"PF2E.MKS.Dialog.seek.type.frontburst": "Somewhere within line of sight",
+	"PF2E.MKS.Dialog.seek.type.object": "Search an object around",
+	"PF2E.MKS.Dialog.disarm.title": "Disarm",
+	"PF2E.MKS.Dialog.disarm.select": "Select Weapon or Item",
+    "PF2E.MKS.Dialog.SelectSkill": "Select Skill",
+	"PF2E.MKS.Dialog.Escape.SelectCondition": "Select condition",
+	"PF2E.MKS.Dialog.Escape.SelectSkill": "Select how you escape",
+	"PF2E.MKS.Dialog.RecallKnowledge.SelectSkill": "Select how you recall",
+	"PF2E.MKS.Dialog.CreateADiversion.SelectType": "Select Diversion",
+	"PF2E.MKS.Dialog.AdministerFirstAid.SelectType": "Select Dying or Bleeding Condition",
+	"PF2E.MKS.Dialog.AddModifier.Title": "Add Modifier",
+	"PF2E.MKS.Dialog.AddModifier.Label": ""
 
 }
