--- a/lang/tr.json
+++ b/lang/tr.json
@@ -87,6 +87,21 @@
 	"PF2E.Actions.Trip.Title": "Çelme At",
 	"PF2E.Actions.TumbleThrough.Title": "Havalı Geçiş",
 
+	"PF2E.Actions.AvoidNotice.Title": "Dikkatten Sakın",
+	"PF2E.Actions.Defend.Title": "Savun",
+	"PF2E.Actions.DetectMagic.Title": "Büyü Tespit",
+	"PF2E.Actions.FollowTheExpert.Title": "Uzmanı İzle",
+	"PF2E.Actions.Hustle.Title": "Çabala",
+	"PF2E.Actions.Investigate.Title": "İncele",
+	"PF2E.Actions.Refocus.Title": "Fokuslan",
+	"PF2E.Actions.RepeatASpell.Title": "Büyü Tekrar",
+	"PF2E.Actions.Scout.Title": "İz Sür",
+	"PF2E.Actions.Search.Title": "Ara/Tara",
+	"PF2E.Actions.BorrowAnArcaneSpell.Title": "Büyü Ödünç Al",
+	"PF2E.Actions.Coerce.Title": "Zor Kullan",
+	"PF2E.Actions.CoverTracks.Title": "İzleri Sakla",
+	"PF2E.Actions.DecipherWriting.Title": "Yazıyı Çöz",
+
 	"PF2E.ConditionTypeGrabbed": "Zaptedilmiş",
 	"PF2E.ConditionTypeProne": "Yere Düşmüş",
 	"PF2E.ConditionTypeHidden": "Saklanmış",
@@ -129,6 +144,7 @@
   	"PF2E.ActionTag.basic": "Basit",
   	"PF2E.ActionTag.social": "Sosyal",
   	"PF2E.ActionTag.stealth": "Gizlilik",
+	"PF2E.ActionTag.preparation": "Hazırlık",
   	"PF2E.ActionTag.rudimentary": "Temel",
 	
 	"PF2E.MKS.ActionsPanel.ShowApplicable": "Uygun Olanlar",
@@ -167,6 +183,7 @@
 	"PF2E.MKS.Dialog.seek.type.object": "Etrafında bir objeyi, vb.",
   	"PF2E.MKS.Dialog.disarm.title": "Elinden Düşür",
   	"PF2E.MKS.Dialog.disarm.select": "Silah/Item Seçiniz",
+	"PF2E.MKS.Dialog.SelectSkill": "Yetenek Seç",
   	"PF2E.MKS.Dialog.Escape.SelectCondition": "Kaçmak istediğiniz hali seçiniz",
   	"PF2E.MKS.Dialog.Escape.SelectSkill": "Nasıl kaçacaksınız ?",
 	"PF2E.MKS.Dialog.RecallKnowledge.SelectSkill": "Nasıl aklınıza getireceksiniz ?",
