--- a/lang/tr.json
+++ b/lang/tr.json
@@ -101,6 +101,7 @@
 	"PF2E.Actions.Coerce.Title": "Zor Kullan",
 	"PF2E.Actions.CoverTracks.Title": "İzleri Sakla",
 	"PF2E.Actions.DecipherWriting.Title": "Yazıyı Çöz",
+	"PF2E.Actions.Retraining.Title": "Kendini Eğit",
 
 	"PF2E.ConditionTypeGrabbed": "Zaptedilmiş",
 	"PF2E.ConditionTypeProne": "Yere Düşmüş",
@@ -145,6 +146,7 @@
   	"PF2E.ActionTag.social": "Sosyal",
   	"PF2E.ActionTag.stealth": "Gizlilik",
 	"PF2E.ActionTag.preparation": "Hazırlık",
+	"PF2E.ActionTag.learning": "Öğrenim",
   	"PF2E.ActionTag.rudimentary": "Temel",
 	
 	"PF2E.MKS.ActionsPanel.ShowApplicable": "Uygun Olanlar",
@@ -190,5 +192,8 @@
 	"PF2E.MKS.Dialog.CreateADiversion.SelectType": "Nasıl dikkat dağıtacaksınız ?",
 	"PF2E.MKS.Dialog.AdministerFirstAid.SelectType": "Neyi iyileştireceksiniz ?",
 	"PF2E.MKS.Dialog.AddModifier.Title": "Add Modifier",
-	"PF2E.MKS.Dialog.AddModifier.Label": ""
+	"PF2E.MKS.Dialog.AddModifier.Label": "",
+	"PF2E.MKS.Dialog.Repair.SelectItem": "Tamir edilecek Nesneyi Seçiniz",
+	"PF2E.Actions.Craft.SelectItemDialog.Title": "İmal edilecek Nesneyi Seçiniz",
+	"PF2E.Actions.Craft.SelectItemDialog.DropItemZoneLabel": "Nesneyi buraya sürükleyin..."
 }
