--- a/lang/tr.json
+++ b/lang/tr.json
@@ -164,6 +164,8 @@
 	"PF2E.MKS.Dialog.MultipleButtons.Title": "Seçiniz",
 	"PF2E.MKS.UI.ActionsPanel.Label": "Aksiyonlar",
 	"PF2E.MKS.UI.RelativeCondPanel.Label": "Göreli Durumlar",
+	"PF2E.MKS.UI.EquipmentsPanel.Label": "Ekipmanlar",
+	"PF2E.MKS.UI.EquipmentsPanel.NoActorSelected": "Bir aktör seçiniz...",
 	"PF2E.MKS.Warning.Actor.OneMustBeSelected": "Bir piyon seçmelisiniz!",
 	"PF2E.MKS.Warning.Actor.AtLeastOneMustBeSelected": "En az bir piyon seçmelisiniz!",
 	"PF2E.MKS.Warning.Target.OneMustBeSelected": "Bir piyon hedeflemelisiniz!",
