Equipment Panel improvements....

--- a/lang/en.json
+++ b/lang/en.json
@@ -102,6 +102,10 @@
 	"PF2E.MKS.UI.RelativeCondPanel.Label": "Relative Conditions",
 	"PF2E.MKS.UI.EquipmentsPanel.Label": "Equipments",
 	"PF2E.MKS.UI.EquipmentsPanel.NoActorSelected": "Please select an actor...",
+	"PF2E.MKS.UI.EquipmentsPanel.Refresh": "Refresh",
+	"PF2E.MKS.UI.EquipmentsPanel.Unequip": "Unequip",
+	"PF2E.MKS.UI.EquipmentsPanel.Change": "Change",
+	"PF2E.MKS.UI.EquipmentsPanel.ToggleInvested": "Toggle Invested",
 	"PF2E.MKS.Dialog.SelectOne.Title": "Select One",
 	"PF2E.MKS.Dialog.MultipleButtons.Title": "Press One",
 	"PF2E.MKS.Warning.Actor.OneMustBeSelected": "You must select exactly one actor!",
