--- a/lang/tr.json
+++ b/lang/tr.json
@@ -166,6 +166,10 @@
 	"PF2E.MKS.UI.RelativeCondPanel.Label": "Göreli Durumlar",
 	"PF2E.MKS.UI.EquipmentsPanel.Label": "Ekipmanlar",
 	"PF2E.MKS.UI.EquipmentsPanel.NoActorSelected": "Bir aktör seçiniz...",
+	"PF2E.MKS.UI.EquipmentsPanel.Refresh": "Yenile",
+	"PF2E.MKS.UI.EquipmentsPanel.Unequip": "Çıkar",
+	"PF2E.MKS.UI.EquipmentsPanel.Change": "Değiştir",
+	"PF2E.MKS.UI.EquipmentsPanel.ToggleInvested": "Bağlanma Durumu",
 	"PF2E.MKS.Warning.Actor.OneMustBeSelected": "Bir piyon seçmelisiniz!",
 	"PF2E.MKS.Warning.Actor.AtLeastOneMustBeSelected": "En az bir piyon seçmelisiniz!",
 	"PF2E.MKS.Warning.Target.OneMustBeSelected": "Bir piyon hedeflemelisiniz!",
