Actions Panel filter added

--- a/lang/en.json
+++ b/lang/en.json
@@ -91,6 +91,7 @@
 	"PF2E.ActionTag.rudimentary": "Rudimentary",
 	"PF2E.MKS.ActionsPanel.ShowApplicable": "Show Applicable",
 	"PF2E.MKS.ActionsPanel.InCombatTurn": "In Combat Turn",
+	"PF2E.MKS.ActionsPanel.Filter": "Filter",
 	
 	"PF2E.MKS.SC.arcane": "Esrar - Arcane Büyü",
 	"PF2E.MKS.SC.occult": "Kült - Occult Büyü",
