degreeOfSuccess api change

--- a/lang/en.json
+++ b/lang/en.json
@@ -4,16 +4,16 @@
 	
 	"PF2E.Concept.DC": "DC",
 	"PF2E.Concept.Awareness.Title": "Awareness",
-	"PF2E.Concept.Awareness.Unnoticed": "Farkedilmemiş",
-	"PF2E.Concept.Awareness.Undetected": "Saptanmamış",
-	"PF2E.Concept.Awareness.Hidden": "Gizli",
-	"PF2E.Concept.Awareness.Observed": "Görülmüş",
+	"PF2E.Concept.Awareness.Unnoticed": "Unnoticed",
+	"PF2E.Concept.Awareness.Undetected": "Undetected",
+	"PF2E.Concept.Awareness.Hidden": "Hidden",
+	"PF2E.Concept.Awareness.Observed": "Observed",
 	"PF2E.Concept.Attitude.Title": "Attitude",
-	"PF2E.Concept.Attitude.Hostile": "Düşman",
-	"PF2E.Concept.Attitude.Unfriendly": "Hasmane",
-	"PF2E.Concept.Attitude.Indifferent": "Kayıtsız",
-	"PF2E.Concept.Attitude.Friendly": "Arkadaş",
-	"PF2E.Concept.Attitude.Helpful": "Yardımcı",
+	"PF2E.Concept.Attitude.Hostile": "Hostile",
+	"PF2E.Concept.Attitude.Unfriendly": "Unfriendly",
+	"PF2E.Concept.Attitude.Indifferent": "Indifferent",
+	"PF2E.Concept.Attitude.Friendly": "Friendly",
+	"PF2E.Concept.Attitude.Helpful": "Helpful",
 	"PF2E.Concept.Cover.Title": "Cover",
 	"PF2E.Concept.Cover.None": "None",
 	"PF2E.Concept.Cover.Lesser": "Lesser",
