--- a/lang/tr.json
+++ b/lang/tr.json
@@ -153,6 +153,7 @@
   	"PF2E.ActionTag.stealth": "Gizlilik",
 	"PF2E.ActionTag.preparation": "Hazırlık",
 	"PF2E.ActionTag.learning": "Öğrenim",
+	"PF2E.ActionTag.inspection": "Keşif",
   	"PF2E.ActionTag.rudimentary": "Temel",
 	
 	"PF2E.MKS.ActionsPanel.ShowApplicable": "Uygun Olanlar",
