Actions working again ...

--- a/lang/tr.json
+++ b/lang/tr.json
@@ -43,7 +43,7 @@
 	"PF2E.Actions.Crawl.Title": "Sürün",
 	"PF2E.Actions.ConcealAnObject.Title": "Obje Gizle",
 	"PF2E.Actions.Demoralize.Title": "Moral Boz",
-	"PF2E.Actions.DisableADevice.Title": "Cihazı İptal Et",
+	"PF2E.Actions.DisableDevice.Title": "Cihazı İptal Et",
 	"PF2E.Actions.Disarm.Title": "Elinden Düşür",
 	"PF2E.Actions.Escape.Title": "Kurtul",
 	"PF2E.Actions.Feint.Title": "Feyk At",
