--- a/lang/en.json
+++ b/lang/en.json
@@ -41,7 +41,7 @@
 	"PF2E.Actions.RecallKnowledge.Notes.criticalSuccess": "<strong>Critical Success</strong> You recall the knowledge accurately and gain additional information or context.",
 	"PF2E.Actions.RecallKnowledge.Notes.success": "<strong>Success</strong> You recall the knowledge accurately or gain a useful clue about your current situation.",
 	"PF2E.Actions.RecallKnowledge.Notes.criticalFailure": "<strong>Critical Failure</strong> You recall incorrect information or gain an erroneous or misleading clue.",
-	"PF2E.Actions.DisableADevice.Title": "Disable a Device",
+	"PF2E.Actions.DisableDevice.Title": "Disable Device",
 	"PF2E.Actions.PalmAnObject.Title": "Palm an Object",
 	"PF2E.Actions.Steal.Title": "Steal",
 
