--- a/lang/en.json
+++ b/lang/en.json
@@ -148,6 +148,7 @@
 	"PF2E.MKS.Warning.Target.OneMustBeSelected": "You must target exactly one token!",
 	"PF2E.MKS.Warning.Target.AtLeastOneMustBeSelected": "You must target at least one token!",
 	"PF2E.MKS.Warning.Encounter.NoneExists": "No encounter found.",
+	"PF2E.MKS.Warning.Action.MustUseHealersTools": "You need to use healers' tools.",
 	"PF2E.MKS.Error.DCNotSetInTime": "GM didn't set required DC in time.",
 	"pf2e.mks.check.skill-check.defaulttitle.firstpart": "${actor.name} ${stat.label} Check",
 	"pf2e.mks.check.perception-check.defaulttitle.firstpart": "${actor.name} Perception Check",
