--- a/lang/tr.json
+++ b/lang/tr.json
@@ -75,6 +75,7 @@
 	"PF2E.Actions.ReceiveAid.Title": "Yardım Al",
 	"PF2E.Actions.Release.Title": "Bırak",
 	"PF2E.Actions.Request.Title": "İstekte Bulun",
+	"PF2E.Actions.RestForNight.Title": "Gece Dinlen",
 	"PF2E.Actions.Shove.Title": "İtekle",
 	"PF2E.Actions.Seek.Title": "Ara/Tara",
 	"PF2E.Actions.SenseMotive.Title": "Niyet Anla",
