Actions compendium updated

--- a/lang/en.json
+++ b/lang/en.json
@@ -71,6 +71,7 @@
 	"PF2E.Actions.Coerce.Title": "Coerce",
 	"PF2E.Actions.CoverTracks.Title": "Cover Tracks",
 	"PF2E.Actions.DecipherWriting.Title": "Decipher Writing",
+	"PF2E.Actions.IdentifyAlchemy.Title": "Identify Alchemy",
 	"PF2E.Actions.IdentifyMagic.Title": "Identify Magic",
 	"PF2E.Actions.LearnASpell.Title": "Learn a Spell",
 	"PF2E.Actions.Retraining.Title": "Retraining",
