--- a/lang/tr.json
+++ b/lang/tr.json
@@ -89,6 +89,7 @@
 	"PF2E.Actions.TakeCover.Title": "Siper Al",
 	"PF2E.Actions.Trip.Title": "Çelme At",
 	"PF2E.Actions.TumbleThrough.Title": "Havalı Geçiş",
+	"PF2E.Actions.TreatWounds.Title": "Yaraları Sar",
 
 	"PF2E.Actions.AvoidNotice.Title": "Dikkatten Sakın",
 	"PF2E.Actions.Defend.Title": "Savun",
